tests/paczka1/fuzzy1/41459542.err
Error in line 21: TVg94ghF A179 263,00
Error in line 4: TVg94ghF A179 82,7
